html and styling update

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <h1>Cyrus Bigham Bio</h1>           
              <ul id="navigation">
-                <li>About Me</li>
-                <li>Work</li>
-                <li>Contact Me</li>
-                <li>Resume</li>
+                <li><a href="AboutME"> About Me</a></li>
+                <li><a href="#Work">Work</a> </li>
+                <li><a href="#contact-me"> Contact Me</a></li>
+                <!-- <li><a href="#Resume">Resume</a> </li> *TO BE ADDED ONCE I HAVE A RESUME*-->
             </ul>
         </nav>
     </header>
@@ -28,21 +28,26 @@
     <main>
         <section>
             <h2>about me  </h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure tempore eligendi numquam nemo dolore! Aspernatur ipsum, nam eum quam perspiciatis, nihil, est error consectetur reprehenderit tempora voluptates dolorum quae assumenda.
+        <p>After a successful carrer in the finacial industry I decided to pursue my passions.
+            I found that a love for technollogy and problem solving lead me to discovering programing. Within this new passion I desired to learn as much as I could and rise to be the best I could at this new skill! 
 
         </p>
-    </section>
+        </section>
+        <hr>
         <section> 
-            <h2>Work</h2>
+            <h3>Work</h3>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat excepturi eius, dicta, culpa necessitatibus saepe vero reprehenderit deserunt distinctio sed impedit, nobis error illo repellat ratione incidunt. Quo, corrupti. Nesciunt.
-
-            </p>
+            <p>I have made this easy to reference bio to showcase the various achevments I have accomplished in my first year of programing and coding. </p>
+            <a href="https://github.com/bighamcyrus/challenge-1-repo-cyrus-bigham" target="_blank"> Github website code restructure
+            <div><img src="./assets/Horiseon screenshot.png" alt="screenshot of Horiseon website work page">
+            </div>
+         </a>
+            
         </section>
     </main>
         <div><br /></div>
-        <footer > 
-            <h2>Contact Me</h2>
+        <footer id="contact-me"> 
+            <h4 >Contact Me </h4>
             <address>
                 <ul id="navigation">
                     <li><a href="tel:+6025735575">602-573-5575</a></li> 
@@ -52,7 +57,7 @@
                
              </ul>
             </address>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum maiores sint recusandae dolores! Quidem repellendus sapiente, tempora, minus dolorum laudantium temporibus ipsum tempore, doloremque nostrum inventore odit! Eveniet, quisquam fuga!
+            <p>Further work references available upon request. 
                 </p>
         </footer>
 
