hmtl and CSS update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <h1>Cyrus Bigham Bio</h1>           
              <ul id="navigation">
-                <li><a href="AboutME"> About Me</a></li>
+                <li><a href="#AboutMe"> About Me</a></li>
                 <li><a href="#Work">Work</a> </li>
                 <li><a href="#contact-me"> Contact Me</a></li>
                 <!-- <li><a href="#Resume">Resume</a> </li> *TO BE ADDED ONCE I HAVE A RESUME*-->
@@ -26,19 +26,19 @@
     </div>    
    
     <main>
-        <section>
-            <h2>about me  </h2>
+        <section id="AboutMe">
+            <h2> About Me  </h2>
         <p>After a successful carrer in the finacial industry I decided to pursue my passions.
             I found that a love for technollogy and problem solving lead me to discovering programing. Within this new passion I desired to learn as much as I could and rise to be the best I could at this new skill! 
 
         </p>
         </section>
         <hr>
-        <section> 
+        <section id="Work"> 
             <h3>Work</h3>
 
             <p>I have made this easy to reference bio to showcase the various achevments I have accomplished in my first year of programing and coding. </p>
-            <a href="https://github.com/bighamcyrus/challenge-1-repo-cyrus-bigham" target="_blank"> Github website code restructure
+            <a href="https://bighamcyrus.github.io/Refactored-Code-for-Horiseon/" target="_blank"> Github website code restructure
             <div><img src="./assets/Horiseon screenshot.png" alt="screenshot of Horiseon website work page">
             </div>
          </a>
