--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
             I found that a love for technollogy and problem solving lead me to discovering programing. Within this new passion I desired to learn as much as I could and rise to be the best I could at this new skill! 
 
         </p>
+        
+        <img class=selfie src="./assets/selfie.jpg" alt="picture of Cyrus Bigham">
         </section>
         <hr>
         <section id="Work"> 
             <h3>Work</h3>
 
             <p>I have made this easy to reference bio to showcase the various achevments I have accomplished in my first year of programing and coding. </p>
-            <a href="https://bighamcyrus.github.io/Refactored-Code-for-Horiseon/" target="_blank"> Github website code restructure
+           
+            <a href="https://github.com/bighamcyrus/My-bio">Github website code restructure</a>
+            <a href="https://bighamcyrus.github.io/Refactored-Code-for-Horiseon/" target="_blank"> 
             <div><img src="./assets/Horiseon screenshot.png" alt="screenshot of Horiseon website work page">
             </div>
          </a>
