--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class="subtitle">
-        I make responsive websites and applications that will blow you away!  
+        I make responsive websites and applications that will blow you away!! 
     </div>    
    
     <main>
