--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <p>I have made this easy to reference bio to showcase the various achevments I have accomplished in my first year of programing and coding. </p>
            
-            <a href="https://github.com/bighamcyrus/My-bio">Github website code restructure</a>
+            <a href="https://github.com/bighamcyrus/Refactored-Code-for-Horiseon">Github website code restructure</a>
             <a href="https://bighamcyrus.github.io/Refactored-Code-for-Horiseon/" target="_blank"> 
             <div><img src="./assets/Horiseon screenshot.png" alt="screenshot of Horiseon website work page">
             </div>
