--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="assets/css/styles.css" rel="stylesheet" />
+        <link href="docs/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -72,7 +72,7 @@
                                 <!-- Add a plust sign to the image bodx on hover <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
                             <!-- Image and link to portfolio piece 1 -->
-                            <img class="img-fluid" src="assets/img/PasswordGenerator.png"target="_blank" alt="password generator" />
+                            <img class="img-fluid" src="docs/img/PasswordGenerator.png"target="_blank" alt="password generator" />
                         </div>
                     </a>
                     <!-- Portfolio Item 2-->
@@ -82,7 +82,7 @@
                                 <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
                             <!-- Image for box 2  -->
-                            <img class="img-fluid" src="assets/img/HoriseonRefactored.png" alt="SEO Company Webpage" />
+                            <img class="img-fluid" src="docs/img/HoriseonRefactored.png" target="_blank" alt="SEO Company Webpage" />
                         </div>
                     </a>
                     <!-- Portfolio Item 3-->
@@ -91,7 +91,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
-                            <img class="img-fluid" src="assets/img/calendarapp.png" alt="A link to a calendar app" />
+                            <img class="img-fluid" src="docs/img/calendarapp.png" alt="A link to a calendar app" />
                         </div>
                     </a>
                     <!-- Portfolio Item 4-->
@@ -100,7 +100,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
-                            <img class="img-fluid" src="assets/img/weatherApp.png" alt="picture of weather api website" />
+                            <img class="img-fluid" src="docs/img/weatherApp.png" alt="picture of weather api website" />
                         </div>
                     </a>
                     <!-- Portfolio Item 5-->
@@ -109,7 +109,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
-                            <img class="img-fluid" src="assets/img/APIPractice.png" alt="..." />
+                            <img class="img-fluid" src="docs/img/APIPractice.png" alt="..." />
                         </div>
                     </a>
                     <!-- Portfolio Item 6-->
@@ -118,7 +118,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
-                            <img class="img-fluid" src="assets/img/nodeJSscreenshot.png" alt=" code picture working node.js" />
+                            <img class="img-fluid" src="docs/img/nodeJSscreenshot.png" alt=" code picture working node.js" />
                         </div>
                     </div>
                 </a>
