updated portfolio links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="docs/css/styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -95,12 +95,12 @@
                         </div>
                     </a>
                     <!-- Portfolio Item 4-->
-                    <a href="https://bighamcyrus.github.io/WeatherApp/" target="_blank" class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                    <a href="https://whispering-basin-00391.herokuapp.com/" target="_blank" class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <!-- <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div> -->
                             </div>
-                            <img class="img-fluid" src="docs/img/weatherApp.png" alt="picture of weather api website" />
+                            <img class="img-fluid" src="docs/img/CarRepairShops.png" alt="picture of weather api website" />
                         </div>
                     </a>
                     <!-- Portfolio Item 5-->
